css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,700&subset=greek,latin);


html {
  font-family: 'Open Sans', sans-serif;
  color: #222;
  font-size: 1em;
  line-height: 1.4;
}

::-moz-selection {
  background: #b3d4fc;
  text-shadow: none;
}

::selection {
  background: #b3d4fc;
  text-shadow: none;
}

hr {
  display: block;
  height: 1px;
  border: 0;
  border-top: 1px solid #ccc;
  margin: 1em 0;
  padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
  vertical-align: middle;
}

fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

textarea {
  resize: vertical;
}

.browserupgrade {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}


/* ==========================================================================
Author's custom styles
========================================================================== */


body {
  text-align: center;
  padding-bottom: 100px;
  background: #000;
  color: #FFF;
}

.slideshow { 
  position: fixed;
  width: 100%;
  height: 100%;
  top: 0px;
  left: 0px;
  z-index: -1; 
}

.slideshow div { 
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0px;
  left: 0px;
  color: transparent;
  background-size: cover;
  background-position: 50% 50%;
  background-repeat: none;
  opacity: 0;
  z-index: 0;
  animation: slides 36s linear infinite 0s; 
}

.slideshow div:nth-child(1) { 
  background-image: url("/img/25652151093_ea726f177d_k.jpg");
}
.slideshow div:nth-child(2) { 
  background-image: url("/img/26254937335_8cd961726b_k.jpg");
  animation-delay: 6s; 
}
.slideshow div:nth-child(3) { 
  background-image: url("/img/26190093491_413872a647_k.jpg");
  animation-delay: 12s; 
}
.slideshow div:nth-child(4) { 
  background-image: url("/img/26229513566_57103b1c8c_k.jpg");
  animation-delay: 18s; 
}
.slideshow div:nth-child(5) { 
  background-image: url("/img/25653604983_c5ee73427e_k.jpg");
  animation-delay: 24s; 
}
.slideshow div:nth-child(6) { 
  background-image: url("/img/25207892046_2c0ed16f0a_k.jpg");
  animation-delay: 30s; 
}

@keyframes slides {
  0% {
    opacity: 0;
    animation-timing-function: ease-in;
  }
  8% {
    opacity: 1;
    transform: scale(1.05);
    animation-timing-function: ease-out;
  }
  17% {
    opacity: 1;
    transform: scale(1.1);
  }
  25% {
    opacity: 0;
    transform: scale(1.1);
  }
  100% { opacity: 0 }
}

.container {
  padding: 0 30px;
}

.logo {
  margin-top: 100px;
}

.intro {
  font-weight: bold;
  max-width: 600px;
  margin: 50px auto;
}

.btn-order {
  font-size: 2em;
  font-weight: bold;
  display: inline-block;
  cursor: pointer;
  position: relative;
  padding: 10px 20px;
}

.btn-order:hover {
}

.btn-order::before,
.btn-order::after {
  content: "";
  display: block;
  position: absolute;
  height: 2px;
  width: 70%;
  left: 15%;
  background: #FFF;
  transition: all .5s;
}

.btn-order::before {
  top: 0;
}

.btn-order::after {
  bottom: 0;
}

.btn-order:hover::before,
.btn-order:hover::after {
  left: 0;
  width: 100%;
}

footer {
  position: absolute;
  bottom: 30px;
  text-align: center;
  width: 80%;
  left: 10%;
  font-size: 1em;
  line-height: 2;
}











/* ==========================================================================
Media Queries
========================================================================== */

@media only screen and (max-height: 700px) {
  footer {
    position: static;
    margin-top: 100px;
    width: auto;
  }
  .logo {
    width: 400px;
  }
}

@media only screen and (max-width: 800px) {
  .logo {
    width: 400px;
  }
  .slideshow > div {
    display: none;
    animation: none;
  }
  .slideshow > div:nth-child(1) { 
    display: block;
    opacity: 1;
  }
}

@media only screen and (max-width: 600px) {
  .logo {
    width: 250px;
  }
  body {
    font-size: 80%;
  }
}

@media only screen and (max-width: 350px) {
  .logo {
    width: 150px;
  }
}

@media print,
(-o-min-device-pixel-ratio: 5/4),
(-webkit-min-device-pixel-ratio: 1.25),
(min-resolution: 120dpi) {

}

/* ==========================================================================
Helper classes
========================================================================== */

.hidden {
  display: none !important;
  visibility: hidden;
}

.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

.invisible {
  visibility: hidden;
}

.clearfix:before,
.clearfix:after {
  content: " ";
  display: table;
}

.clearfix:after {
  clear: both;
}

.clearfix {
  *zoom: 1;
}

/* ==========================================================================
Print styles
========================================================================== */

@media print {
  *,
  *:before,
  *:after {
    background: transparent !important;
    color: #000 !important;
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a,
  a:visited {
    text-decoration: underline;
  }

  a[href]:after {
    content: " (" attr(href) ")";
  }

  abbr[title]:after {
    content: " (" attr(title) ")";
  }

  a[href^="#"]:after,
  a[href^="javascript:"]:after {
    content: "";
  }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  thead {
    display: table-header-group;
  }

  tr,
  img {
    page-break-inside: avoid;
  }

  img {
    max-width: 100% !important;
  }

  p,
  h2,
  h3 {
    orphans: 3;
    widows: 3;
  }

  h2,
  h3 {
    page-break-after: avoid;
  }
}

